Bug 497826 - Panel fails to Dodge Windows/Auto-Hide after specific fullscreen-to-maximized window usage
Summary: Panel fails to Dodge Windows/Auto-Hide after specific fullscreen-to-maximized...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.2.4
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks: 478797
  Show dependency treegraph
 
Reported: 2024-12-23 13:52 UTC by Fernando Marcelino Muniz
Modified: 2025-01-24 05:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
Panel forgets to Dodge Windows (2.22 MB, video/x-matroska)
2024-12-23 13:52 UTC, Fernando Marcelino Muniz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando Marcelino Muniz 2024-12-23 13:52:20 UTC
Created attachment 176852 [details]
Panel forgets to Dodge Windows

The panel in Dodge Windows setting is not behaving correctly when exiting fullscreen.
Comment 1 Fernando Marcelino Muniz 2024-12-23 14:20:23 UTC
1- Have the app in fullscreen.
2- Have the panel set to "Dodge Windows"
3- Press the Windows button to open the panel.
4- Close the panel by clicking on it.
5- Move your cursor to the panel's "blue beam of light" until it disappears.
6- Exit fullscreen.

Result:

Panel does not Dodge Windows until the user hovers the cursor over the panel.
Comment 2 Fernando Marcelino Muniz 2024-12-27 11:43:16 UTC
The bug also happens with "Hide Automatically".
Comment 3 Nate Graham 2025-01-03 22:07:14 UTC
Can reproduce.
Comment 4 Bug Janitor Service 2025-01-21 11:49:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7040
Comment 5 Niccolò Venerandi 2025-01-21 13:51:05 UTC
Git commit 25de61736815d015c9c40e6c5797ce5a688ec7e2 by Niccolò Venerandi.
Committed on 21/01/2025 at 13:34.
Pushed by niccolove into branch 'master'.

Never show autohide/dodge windows panels when a window is fullscreen

Currently, if a edge with a autohide/dodge panel is triggered when a
window is fullscreen, the panel will be shown; but, since it will not
have focus, it will be drawn behind the fullscreen window. To avoid
this, we make sure to never display autohide/dodge panels in this
scenario.
Related: bug 497829

M  +2    -1    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/-/commit/25de61736815d015c9c40e6c5797ce5a688ec7e2
Comment 6 Niccolò Venerandi 2025-01-21 13:57:03 UTC
Git commit 31e0e256ad534c146bd42a6ad3c22bdc16d56685 by Niccolò Venerandi.
Committed on 21/01/2025 at 13:51.
Pushed by niccolove into branch 'Plasma/6.3'.

Never show autohide/dodge windows panels when a window is fullscreen

Currently, if a edge with a autohide/dodge panel is triggered when a
window is fullscreen, the panel will be shown; but, since it will not
have focus, it will be drawn behind the fullscreen window. To avoid
this, we make sure to never display autohide/dodge panels in this
scenario.
Related: bug 497829


(cherry picked from commit 25de61736815d015c9c40e6c5797ce5a688ec7e2)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +2    -1    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/-/commit/31e0e256ad534c146bd42a6ad3c22bdc16d56685