Never show autohide/dodge windows panels when a window is fullscreen

Currently, if a edge with a autohide/dodge panel is triggered when a
window is fullscreen, the panel will be shown; but, since it will not
have focus, it will be drawn behind the fullscreen window. To avoid
this, we make sure to never display autohide/dodge panels in this
scenario.

BUG:497826
BUG:497829


(cherry picked from commit 25de61736815d015c9c40e6c5797ce5a688ec7e2)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>